app/src/assets/sass/components/_banner.scss
.c-banner {
	@include container;
	display: inline-block;
	position: relative;
	width: 100%;
	height: em(380px, $em-base);
	&--background {
	    @include position(absolute, 0, 0, 0, 0);
		background-image: url("../img/banner.jpg");
		z-index: -1;
	    background-position: center center;
	    background-size: cover !important;
	}
	&--left {
		@include flex-align(center, center);
		flex: 0 0 50%;
	    flex-direction: column;
	    @include media('>phone', '<tablet'){
    		flex: 0 0 70%;
    	}
	}
	&__title {
		color: $white;
    	font-size: em(35px, $em-base);
		opacity: 0.9;
    	font-weight: 400;
    	@include media('>phone'){
			font-size: em(22px, $em-base);
    	}
    	@include media('>tablet'){
			font-size: em(25px, $em-base);
    	}
	}
	&--right {
		@include flex-align(right, bottom)
    	margin-bottom: em(20px, $em-base);
    	flex-direction: row;
    	flex: 0 0 50%;
    	@include media('>phone', '<tablet'){
    		@include flex-align(center, bottem)
    		flex: 0 0 30%;
    	}
	}
	&--url__line > a,
	span.c-banner--url__line {
		color: white;
    	font-weight: 100;
    	border-bottom: em(1px solid $white, $em-base);
    	padding-bottom: em(2px, $em-base);
    	margin: em(0 10px, $em-base);
    	&:hover {
    		opacity:0.7;
    	}
	}
	&--detail, a.c-banner--detail {
		@include flex-align(center, center)
		color: $white;
		&:hover {
    		opacity:0.7;
    	}
    	@include media('>phone'){
			font-size: em(13px, $em-base);
    	}
    	@include media('>phone', '<tablet'){
    		margin-bottom: 20px;
    	}
	}
	&--url__text {
		color: $white;
	}
}

